# cpp-todo-cli

./: .gitignore  CMakeLists.txt  build.sh  compile.sh  run.sh
.cache/clangd/index/: main.cpp.F7A3BDD727ADD889.idx
src/: main.cpp
